--- a/src/proto_generator/proto_template.jinja2
+++ b/src/proto_generator/proto_template.jinja2
@@ -6,13 +6,21 @@ import "{{ import }}";
     {{ "\t" * (indent - 1) }}message {{ message.name }} {
     {%- for field in message.fields %}
         {%- if field.annotation_disabled %}
-
     {{ "\t" * (indent) }}// "{{ field.annotation }}"
         {%- endif %}
     {{ "\t" * (indent) }}{{ field.type }} {{ field.name }} = {{ field.position }};
     {%- endfor %}
+    {% if message.enums %}
+        {%- for enum in message.enums %}
+    {{ "\t" * (indent) }}enum {{ enum.identifier }} {
+        {%- for enum_value in enum.data.items() %}
+    {{ "\t" * (indent + 1) }}{{ enum_value[0] }} = {{ enum_value[1] }};
+        {%- endfor -%}
+    {{ "\t" * (indent) }}
+    }
+        {%- endfor %}
+    {%- endif -%}
     {%- for nested_message in message.nested_messages %}
-
     {{ render_message(nested_message, indent + 1) }}
     {%-endfor %}
 
